# desafio-somos-educacao

./: README.md  pyproject.toml
amostras/: saida_p2.json
analizador_de_texto/: __init__.py  analizador.py  problema1.py  problema2.py  utils.py
tests/: __init__.py  test_problema1.py  test_problema2.py  test_utils.py
