[tool.poetry]
name = "desafio-somos-educacao"
version = "0.1.0"
description = "Solução do desafio técnico da SOMOS Educação em Python"
authors =  ["Henrique Spencer Albuquerque <henriquespencer11@gmail.com>"]
readme = "README.md"
packages = [{ include = "desafio", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
