[tool.poetry]
name = "analizador-de-texto"
version = "0.1.0"
description = "Solução do desafio técnico da SOMOS Educação em Python para análise de expressões e categorização de textos"
authors = ["Henrique Spencer Albuquerque <henriquespencer11@gmail.com>"]
readme = "README.md"
packages = [{ include = "analizador_de_texto" }]
include = ["analizador_de_texto/dados/*.txt", "analizador_de_texto/dados/*.json"]
repository = "https://github.com/henriqueSpencer/desafio-somos-educacao"

[tool.poetry.dependencies]
python = ">=3.8,<5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
